--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,12 @@
-optIn.breaksInsideChains = true
+version                                 = 2.4.2
+style                                   = defaultWithAlign
+danglingParentheses                     = true
+indentOperator                          = spray
+includeCurlyBraceInSelectChains         = true
+maxColumn                               = 120
+rewrite.rules                           = [RedundantParens, SortImports, PreferCurlyFors]
+spaces.inImportCurlyBraces              = true
+binPack.literalArgumentLists            = false
+unindentTopLevelOperators               = true
+optIn.breaksInsideChains                = true
+newlines.alwaysBeforeTopLevelStatements = true
